force-app/main/default/objects/Deployment_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>DataToDel__c</fullName>
        <label>DataToDel</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataToRollBack__c</fullName>
        <label>DataToRollBack</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeploymentData__c</fullName>
        <label>DeploymentData</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Deployment Metadatas</relationshipLabel>
        <relationshipName>Deployment_Metadatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DataToDel__c</columns>
        <columns>DataToRollBack__c</columns>
        <columns>DeploymentData__c</columns>
        <columns>Deployment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Metadatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>